--- a/src/index.html
+++ b/src/index.html
@@ -168,8 +168,8 @@
             alt="footer image"
           />
         </div>
-        <div class="footer__about">
-          <div class="footer__title">About us</div>
+        <section class="footer__about">
+          <h2 class="footer__title">About us</h2>
           <div class="footer__text">
             <span>
               We’re a London-based tech company on a mission to <br />
@@ -187,8 +187,41 @@
             </span>
             <span>Because beautiful tech shouldn’t be complicated.</span>
           </div>
-        </div>
+        </section>
       </footer>
+      <section class="contact">
+        <h2 class="contact__title">Contact us</h2>
+        <form class="contact__form">
+          <input
+            class="contact__name"
+            type=" text"
+            placeholder="Name"
+            required
+          />
+          <input
+            class="contact__email"
+            type=" text"
+            placeholder="Email"
+            required
+          />
+          <input
+            class="contact__phone"
+            type=" text"
+            placeholder="Phone"
+            required
+          />
+          <input
+            class="contact__submit"
+            type="submit"
+            value="Send"
+            required
+          />
+        </form>
+        <div>
+          <span>Phone</span>
+          <span class="contact__phone">+1 234 5555-55-55</span>
+        </div>
+      </section>
     </div>
   </body>
 </html>
