--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Space+Grotesk:wght@300..700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="/src/images/favicon.png">
   </head>
 
   <body>
