add animation in header and fix form

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
             src="./images/logo.png"
             alt="Nothing logo"
           />
-          <a href="#header">
+          <a href="#">
             <img src="./images/icons/Icon-Close.png" alt="Close menu" />
           </a>
         </div>
@@ -206,24 +206,24 @@
           <h2 class="contact__title">Contact us</h2>
           <div class="contact__container">
             <form class="contact__form">
-              <input
+              <textarea
                 class="contact__name"
                 type=" text"
                 placeholder="Name"
                 required
-              />
-              <input
+              ></textarea>
+              <textarea
                 class="contact__email"
                 type=" text"
                 placeholder="Email"
                 required
-              />
-              <input
+              ></textarea>
+              <textarea
                 class="contact__message"
                 type=" text"
                 placeholder="Message"
                 required
-              />
+              ></textarea>
               <input
                 class="contact__submit"
                 type="submit"
