change footer image to bg

--- a/src/index.html
+++ b/src/index.html
@@ -174,12 +174,7 @@
       </section>
     </div>
     <footer class="footer">
-      <div class="footer__container">
-        <img
-          class="footer__image"
-          src="./images/footer.png"
-          alt="footer image"
-        />
+      <div class="footer__image">
       </div>
       <div class="footer__content">
         <section class="footer__about">
